--- a/app/build.gradle
+++ b/app/build.gradle
@@ -51,6 +51,7 @@ dependencies {
 
     // Firebase
     implementation 'com.google.firebase:firebase-auth:21.1.0'
+    implementation 'com.firebaseui:firebase-ui-auth:7.2.0'
 
     // Kotlin
     implementation("androidx.navigation:navigation-fragment-ktx:$nav_version")
