--- a/build.gradle
+++ b/build.gradle
@@ -2,7 +2,11 @@ buildscript {
 
     ext.nav_version = "2.5.3"
 
-
+    repositories {
+        google()
+        mavenCentral()
+    }
+    
     dependencies {
         classpath "androidx.navigation:navigation-safe-args-gradle-plugin:$nav_version"
         classpath 'com.google.gms:google-services:4.3.14'
